--- a/backend/military_unit/pom.xml
+++ b/backend/military_unit/pom.xml
@@ -54,6 +54,12 @@
 			<artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
 			<version>2.5.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.17.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
