--- a/backend/military_unit/pom.xml
+++ b/backend/military_unit/pom.xml
@@ -60,6 +60,18 @@
 			<artifactId>jackson-datatype-jsr310</artifactId>
 			<version>2.17.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.1.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct</artifactId>
+			<version>1.5.5.Final</version>
+		</dependency>
 	</dependencies>
 
 	<build>
