fixed all relationships

--- a/backend/military_unit/src/main/resources/application.properties
+++ b/backend/military_unit/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.username=postgres
 spring.datasource.password=111
 
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 springdoc.swagger-ui.path=/swagger-ui-custom.html
 springdoc.api-docs.path=/api-docs
