--- a/frontend/military_front/public/manifest.json
+++ b/frontend/military_front/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Military App",
+  "name": "Create Military App Sample",
   "icons": [
     {
       "src": "favicon.ico",
